--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
-        "fideloper/proxy": "^4.0",
+        "fideloper/proxy": "^4.0",        
+        "laravel-doctrine/orm": "^1.4",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0"
     },
@@ -41,7 +42,8 @@
             "database/factories"
         ],
         "files": [
-            "app/helpers.php"
+            "app/helpers.php",
+            "src/Domain/helpers.php"
         ]
     },
     "autoload-dev": {
