--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
-        "fideloper/proxy": "^4.0",        
+        "fideloper/proxy": "^4.0",
+        "gedmo/doctrine-extensions": "^2.4",
+        "laravel-doctrine/extensions": "^1.0",
         "laravel-doctrine/orm": "^1.4",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0"
