--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel-doctrine/extensions": "^1.0",
         "laravel-doctrine/orm": "^1.4",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
