--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel-doctrine/orm": "^1.4",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "yajra/laravel-datatables": "^1.4",
         "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
