--- a/public/package.json
+++ b/public/package.json
@@ -9,6 +9,8 @@
   "license": "ISC",
   "dependencies": {
     "blueimp-tmpl": "^3.11.0",
+    "datatables": "^1.10.18",
+    "datatables-bootstrap": "0.0.1",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^7.33.1"
   }
